Fix error with text taking half screen on smaller sizes

--- a/assets/sass/layout/_about.scss
+++ b/assets/sass/layout/_about.scss
@@ -20,7 +20,9 @@
     }
 
     div {
-      width: 46%;
+      @include abs.breakpoint(large) {
+        width: 46%;
+      }
     }
 
     h3 {
